# CrewAI_Financial_Researcher

./: README.md
financial_researcher/: pyproject.toml
financial_researcher/output/: report.md  research.md
financial_researcher/src/financial_researcher/: crew.py  main.py
financial_researcher/src/financial_researcher/config/: agents.yaml  tasks.yaml
